objects/acknowltng__CDStatisticVisit__c.object
<CustomObject>
    <fields>
        <fullName>acknowltng__ArticleClosed__c</fullName>
        <label>Article closed</label>
        <summaryFilterItems>
            <field>acknowltng__CDStatisticArticleTracking__c.acknowltng__Outcome__c</field>
            <operation>equals</operation>
            <value>Article closed</value>
        </summaryFilterItems>
        <summaryForeignKey>acknowltng__CDStatisticArticleTracking__c.acknowltng__Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>acknowltng__ArticlesHelped__c</fullName>
        <label>Articles helped</label>
        <summaryFilterItems>
            <field>acknowltng__CDStatisticArticleTracking__c.acknowltng__Outcome__c</field>
            <operation>equals</operation>
            <value>Article helped</value>
        </summaryFilterItems>
        <summaryForeignKey>acknowltng__CDStatisticArticleTracking__c.acknowltng__Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>acknowltng__ArticlesNotHelped__c</fullName>
        <label>Articles not helped</label>
        <summaryFilterItems>
            <field>acknowltng__CDStatisticArticleTracking__c.acknowltng__Outcome__c</field>
            <operation>equals</operation>
            <value>Article not helped</value>
        </summaryFilterItems>
        <summaryForeignKey>acknowltng__CDStatisticArticleTracking__c.acknowltng__Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>acknowltng__ArticlesViewed__c</fullName>
        <label>Articles viewed</label>
        <summaryForeignKey>acknowltng__CDStatisticArticleTracking__c.acknowltng__Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>acknowltng__CaseFormOpenedOnQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case form opened on question</label>
        <referenceTo>acknowltng__CaseDeflectionQuestion__c</referenceTo>
        <relationshipLabel>CD Statistic Visits</relationshipLabel>
        <relationshipName>Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>acknowltng__CaseFormOpened__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case form opened</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>acknowltng__QuestionsViewed__c</fullName>
        <label>Questions viewed</label>
        <summaryForeignKey>acknowltng__CDStatisticQuestionTracking__c.acknowltng__Visit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>acknowltng__URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>CD Statistic Visit</label>
    <listViews>
        <fullName>acknowltng__All</fullName>
        <columns>NAME</columns>
        <columns>acknowltng__URL__c</columns>
        <columns>acknowltng__QuestionsViewed__c</columns>
        <columns>acknowltng__ArticlesViewed__c</columns>
        <columns>acknowltng__ArticlesHelped__c</columns>
        <columns>acknowltng__ArticlesNotHelped__c</columns>
        <columns>acknowltng__ArticleClosed__c</columns>
        <columns>acknowltng__CaseFormOpened__c</columns>
        <columns>acknowltng__CaseFormOpenedOnQuestion__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>V-{00000}</displayFormat>
        <label>CD Statistic Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CD Statistic Visits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>